Store summary of lighthouse results in mongodb
